--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
 <header class="header">
-  <div class="logo">Fizzy Flip</div>
+<div class="logo">
+  <img src="logo.png" alt="Fizzy Flip Logo" height="45">
+</div>
   <nav>
     <a href="#home">Home</a>
     <a href="#flavors">Flavors</a>
