--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
   <p>Flip your mood. Feel the fizz.</p>
   <button>Order Now</button>
 </section>
+  <section class="bottles">
+  <h2>Our Bottles</h2>
+
+  <div class="bottle-grid">
+    <img src="bottle1.png" alt="Bottle 1">
+    <img src="bottle2.png" alt="Bottle 2">
+    <img src="bottle3.png" alt="Bottle 3">
+    <img src="bottle4.png" alt="Bottle 4">
+    <img src="bottle5.png" alt="Bottle 5">
+  </div>
+</section>
 
 <section class="products" id="flavors">
   <h2>Our Sparkling Flavors</h2>
