--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="#story">Our Story</a>
     <a href="#distributor">Distributor</a>
     <a href="#contact">Order Now</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
 
@@ -71,7 +72,17 @@
   <h2>Order & Enquiries</h2>
   <a href="#">Chat on WhatsApp</a>
 </section>
+  
+ <section class="contact" id="contact">
+  <h2>Contact Us</h2>
 
+  <p><strong>Phone:</strong> +91 9173056541</p>
+  <p><strong>Email:</strong> fizzyflip@gmail.com</p>
+
+  <a href="mailto:fizzyflip@gmail.com" class="contact-btn">
+    Send Email
+  </a>
+</section>
 <footer class="footer">
   <p>© 2025 Fizzy Flip Beverages</p>
 </footer>
