--- a/index.html
+++ b/index.html
@@ -88,5 +88,8 @@
 </footer>
 
 <script src="script.js"></script>
+  <a href="https://wa.me/919173056541" class="whatsapp-float" target="_blank">
+  WhatsApp
+</a>
 </body>
 </html>
