--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
     <div class="product">Grape Fizz</div>
     <div class="product">Berry Blast</div>
     <div class="product">Jeera Soda</div>
+    <div class="product">Orange Zest</div>
+    <div class="product">Green Apple</div>
+    <div class="product">Cola Classic</div>
+    <div class="product">Peach Fizz</div>
+    <div class="product">Mint Lime</div>
   </div>
+  <p class="more-flavors">✨ Many more exciting flavors coming soon!</p>
+  
   <h3>₹45 per bottle</h3>
   <button>Buy Now</button>
 </section>
