--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
 <header class="header">
-<div class="logo">
-  <img src="logo.png" alt="Fizzy Flip Logo" height="45">
+<div class="logo-box">
+  <img src="logo.png" alt="Fizzy Flip Logo">
+  <span class="brand-name">Fizzy Flip</span>
 </div>
   <nav>
     <a href="#home">Home</a>
@@ -25,9 +26,9 @@
 </header>
 
 <section class="hero" id="home">
-  <h1>FIZZY FLIP</h1>
-  <h2>Ultimate Sparkling Elixir</h2>
-  <p>Flip your mood. Feel the fizz.</p>
+  <h1>Fizzy Flip</h1>
+<p class="hero-tagline">Premium Sparkling Soft Drinks at Just ₹45</p>
+<p>Refreshing sparkling soft drinks</p>
   <button>Order Now</button>
 </section>
   <section class="bottles">
@@ -43,7 +44,7 @@
 
 <section class="products" id="flavors">
   <h2>Our Sparkling Flavors</h2>
-  <p>A vibrant range of sparkling water flavors designed to refresh and excite.</p>
+<p class="flavor-line">Crafted for refreshment. Loved in every sip.</p>
   <div class="product-grid">
     <div class="product">Citrus Lemon</div>
     <div class="product">Yum Watermelon</div>
@@ -90,7 +91,7 @@
   </a>
 </section>
 <footer class="footer">
-  <p>© 2025 Fizzy Flip Beverages</p>
+  <p>© 2026 Fizzy Flip Beverages. All rights reserved.</p>
 </footer>
 
 <script src="script.js"></script>
