--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
 <section class="hero" id="home">
   <h1>Fizzy Flip</h1>
-<p class="hero-tagline">Premium Sparkling Soft Drinks at Just ₹45</p>
-<p>Refreshing sparkling soft drinks</p>
+<p class="hero-tagline">
+  Premium Sparkling Soft Drinks at Just ₹45 <br>
+  <span class="hero-sub">Bold Flavors • Refreshing Fizz • Everyday Energy</span>
+</p>
   <button>Order Now</button>
 </section>
   <section class="bottles">
