--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <p><strong>Phone:</strong> +91 9173056541</p>
   <p><strong>Email:</strong> fizzyflip@gmail.com</p>
 
-  <a href="mailto:fizzyflip@gmail.com" class="contact-btn">
+  <a href="mailto:flavorfizzysip" class="contact-btn">
     Send Email
   </a>
 </section>
