--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <p><strong>Email:</strong> flavorfizzysip</p>
 
   <a href="mailto:flavorfizzysip" class="contact-btn">
-    Send Email
+    Send Email.
   </a>
 </section>
 <footer class="footer">
