--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <p><strong>Phone:</strong> +91 9173056541</p>
   <p><strong>Email:</strong> flavorfizzysip</p>
 
-  <a href="mailto:flavorfizzysip" class="contact-btn">
+  <a href="mailto:flavorfizzysip@gmail.com" class="contact-btn">
     Send Email.
   </a>
 </section>
