--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <h2>Contact Us</h2>
 
   <p><strong>Phone:</strong> +91 9173056541</p>
-  <p><strong>Email:</strong> flavorfizzysip</p>
+  <p><strong>Email:</strong> flavorfizzysip@gmail.com</p>
 
   <a href="mailto:flavorfizzysip@gmail.com" class="contact-btn">
     Send Email.
